# prodex

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
product_extractor/: __main__.py  errors.py  registry.py  utils.py
product_extractor/adapters/: amazon.py  base.py  generic.py  shopify.py
product_extractor/cache/: base.py  memory.py
product_extractor/cli/: extract.py
product_extractor/engine/: pipeline.py
product_extractor/normalizers/: currency.py  locale.py  price.py
tests/engine/: test_amazon_pipeline.py  test_pipeline.py
