[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-extractor"
version = "0.1.0"
description = "Universal ecommerce product page extractor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ahmed Khaled" }]

dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "jsonschema>=4.21.0"
]

[project.optional-dependencies]
http = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest", "build", "twine"]

[project.scripts]
product-extract = "product_extractor.cli.extract:main"